# hut

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SECURITY.md  eslint.config.mjs  firestore.rules  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  release-please-config.json  roadmap.md  storage.rules  tsconfig.json  vitest.config.mts  vitest.feature.config.mts  vitest.infra.config.mts
.github/: CODEOWNERS  dependabot.yml
.github/actions/setup-frontend/: action.yml
.github/workflows/: ci.yml  deploy-cloudflare.yml  deploy.yml  e2e.yml  migrate.yml  release-please.yml  sync-staging-to-main.yml  terraform-ci.yml
.storybook/: main.ts  preview.ts  vitest.setup.ts
applications/docker/: .gitignore  docker-compose.yaml
applications/docker/frontend/: .firebaserc  Dockerfile  firebase.json
applications/docker/worker/: Dockerfile
applications/domain-event-logger/: Dockerfile  cabal.project.freeze  domain-event-logger.cabal  hie.yaml
applications/domain-event-logger/app/: Main.hs
applications/domain-event-logger/app/API/: Request.hs  Server.hs
applications/domain-event-logger/app/API/Handlers/: Event.hs
applications/domain-event-logger/src/Aspects/: Log.hs
applications/domain-event-logger/src/Domain/: Event.hs
applications/domain-event-logger/src/UseCase/: EventLogger.hs
applications/domain-event-logger/test/Feature/: EventSpec.hs
applications/domain-event-logger/test/Support/Helper/API/: Request.hs
applications/domain-event-logger/test/Support/Helper/Domain/: Event.hs
applications/domain-event-logger/test/Unit/API/: RequestSpec.hs  ServerSpec.hs
applications/domain-event-logger/test/Unit/Domain/: EventSpec.hs
applications/domain-event-logger/test/Unit/UseCase/: EventLoggerSpec.hs
applications/frontend/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.shared.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.mts  vitest.feature.config.mts  vitest.infra.config.mts  vitest.shared.mts
applications/frontend/.storybook/: main.ts  preview.ts
applications/frontend/admin/: instrumentation.ts  next.config.ts  package.json  sentry.client.config.ts  sentry.edge.config.ts  tsconfig.json
applications/frontend/e2e/: accessibility.spec.ts  admin-analytics.spec.ts  admin-articles.spec.ts  admin-memos.spec.ts  admin-privacy.spec.ts  admin-profile.spec.ts  admin-series.spec.ts  admin-tags-crud.spec.ts  admin-tags.spec.ts  admin-unauthenticated.spec.ts  article-create.spec.ts  article-detail.spec.ts  article-edit.spec.ts  articles-list.spec.ts  chapter-create.spec.ts  chapter-edit.spec.ts  home.spec.ts  login.spec.ts  memo-create.spec.ts  memo-detail.spec.ts  memo-edit.spec.ts  memos-list.spec.ts  public-pages.spec.ts  search.spec.ts  series-create.spec.ts  series-edit.spec.ts  series-list.spec.ts  series.spec.ts
applications/frontend/playwright/: global-setup.ts
applications/frontend/reader/: .dev.vars.example  .env.example  next.config.ts  package.json  pnpm-lock.yaml  sentry.edge.config.ts  tsconfig.json  (+3 more)
applications/scripts/: package-lock.json  package.json
applications/search-token-worker/: Dockerfile  hie.yaml  search-token-worker.cabal
applications/search-token-worker/app/: Main.hs
applications/search-token-worker/app/API/: Request.hs
applications/search-token-worker/app/API/Handlers/: Event.hs
applications/search-token-worker/docs/: testing-guide.md
applications/search-token-worker/src/Domain/: Event.hs  Ngram.hs  SearchToken.hs
applications/search-token-worker/src/Infrastructure/: Firestore.hs
applications/search-token-worker/src/UseCase/: EventHandler.hs
applications/search-token-worker/test/Feature/: EventSpec.hs
applications/search-token-worker/test/Support/Helper/API/: Request.hs
applications/search-token-worker/test/Support/Helper/Domain/: Event.hs
applications/search-token-worker/test/Support/Helper/Infrastructure/: Firestore.hs
applications/search-token-worker/test/Unit/API/: RequestSpec.hs
applications/search-token-worker/test/Unit/Domain/: CommonSpec.hs  EventSpec.hs  SearchTokenSpec.hs
applications/search-token-worker/test/Unit/Infrastructure/: FirestoreSpec.hs
applications/search-token-worker/test/Unit/UseCase/: EventHandlerSpec.hs
applications/worker/: .dockerignore  Dockerfile  cabal.project.freeze
docs/operations/: branch-strategy.md
docs/requirements/: infrastructure_architecture.md
e2e/: admin-articles.spec.ts  admin-memos.spec.ts  admin-privacy.spec.ts  admin-profile.spec.ts  admin-tags-crud.spec.ts  admin-tags.spec.ts  admin-unauthenticated.spec.ts  article-create.spec.ts  article-detail.spec.ts  article-edit.spec.ts  home.spec.ts  memo-detail.spec.ts  memo-edit.spec.ts  public-pages.spec.ts  search.spec.ts
infrastructure/: .gitignore  README.md
scripts/: create-plan-environments.sh  dev-local.sh  dev.sh  init-local.sh  migrate-slug-indexes.ts  setup.sh
src/aspects/: error.ts  logger.ts  result.ts
src/infrastructures/: articles.ts  memos.ts
src/workflows/: article.ts  memo.ts  series.ts
(+1078 files in other folders)
